# automated-research-report-generation

./: .gitignore  pyproject.toml  requirements.txt  users.db
research_and_analyst/api/: main.py
research_and_analyst/notebook/: test.ipynb
research_and_analyst/utils/: model_loader.py
